# MinUI

./: CMakeLists.txt  README.md  Readme.md  TODO.txt
Example/: MyApp.h  Surface.h  main.cpp
MinUI/: App.cpp  App.h  Button.cpp  Button.h  Canva.cpp  Canva.h  Canvas.cpp  Canvas.h  CheckBox.cpp  CheckBox.h  Container.cpp  Container.h  Draw.cpp  Draw.h  Entry.cpp  Entry.h  Font.cpp  Font.h  Frame.cpp  Frame.h  Image.cpp  Image.h  Inputs.cpp  Inputs.h  Label.cpp  Label.h  Search.cpp  Search.h  Slider.cpp  Slider.h  Style.h  Timer.cpp  Timer.h  TrackBar.cpp  TrackBar.h  Types.h  Utils.cpp  Utils.h  Widget.h
